--- a/resources/scss/partials/admin/_main.scss
+++ b/resources/scss/partials/admin/_main.scss
@@ -41,6 +41,24 @@
         }
     }
 
+    .wrapper-dashboard {
+        .highlights-box {
+            min-width: 330px;
+            height: 150px;
+            background-color: $color-primary;
+            border-radius: 10px;
+            padding: 8px;
+            color: white;
+            font-size: 2rem;
+            margin-bottom: 24px;
+
+            i {
+                font-size: 3.5rem;
+                margin-right: 30px;
+            }
+        }
+    }
+
     .wrapper-tech {
         max-width: 500px;
     }
