--- a/resources/scss/partials/admin/_main.scss
+++ b/resources/scss/partials/admin/_main.scss
@@ -51,10 +51,22 @@
             color: white;
             font-size: 2rem;
             margin-bottom: 24px;
+            position: relative;
 
             i {
                 font-size: 3.5rem;
                 margin-right: 30px;
+            }
+
+            .icon-custom-add {
+                position: absolute;
+                bottom: 0;
+                left: 50%;
+                transform: translate(-50%, 50%);
+                color: white;
+                border: 5px solid $color-primary;
+                background-color: $color-primary;
+                border-radius: 50%;
             }
         }
     }
