[add] last project data on home dashboard

--- a/resources/scss/partials/admin/_main.scss
+++ b/resources/scss/partials/admin/_main.scss
@@ -42,19 +42,20 @@
     }
 
     .wrapper-dashboard {
+        padding: 50px;
+
         .highlights-box {
-            min-width: 330px;
-            height: 150px;
+            height: 80px;
             background-color: $color-primary;
             border-radius: 10px;
             padding: 8px;
             color: white;
-            font-size: 2rem;
-            margin-bottom: 24px;
+            font-size: 1.5rem;
+            margin-bottom: 25px;
             position: relative;
 
             i {
-                font-size: 3.5rem;
+                font-size: 3rem;
                 margin-right: 30px;
             }
 
@@ -64,15 +65,27 @@
                 left: 50%;
                 transform: translate(-50%, 50%);
                 color: white;
-                border: 5px solid $color-primary;
+                border: 3px solid $color-primary;
                 background-color: $color-primary;
                 border-radius: 50%;
+                font-size: 2rem;
 
                 &:hover {
                     background-color: white;
                     color: $color-primary;
                     border-color: white;
                 }
+            }
+        }
+    }
+
+    .dashboard-data-box {
+        padding: 0 50px;
+
+        .card {
+            .card-header {
+                background-color: $color-primary;
+                color: white;
             }
         }
     }
